Started working on the 'Engine' of the game by starting with utility classes.  Since I have little experience of C++/SDL I also find starting on the engine allows me to learn the most.
Added a Configuration manager that reads data from an xml file
Added a Logger to log all actions to help me better diagnose problems, as well as a way to let testers/users know whats going on when errors occur.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ FILE(GLOB WINDOWDLLS lib/windows/dlls/*.dll)
 FILE(GLOB SDLGFX includes/sdl-gfx/*.h includes/sdl-gfx/*.c)
 FILE(GLOB TinyXML2 includes/tinyxml2/*.h includes/tinyxml2/*.cpp)
 
+FILE(GLOB Util src/Engine/Util/*.h src/Engine/Util/*.cpp)
+
 FILE(GLOB Config data/config/config.xml)
 FILE(GLOB Tiles data/tiles/*.png)
 FILE(GLOB Maps data/maps/*.xml)
@@ -24,6 +26,8 @@ set (
 
 	${SDLGFX}
 	${TinyXML2}
+
+	${Util}
 )
 
 set (
@@ -47,6 +51,8 @@ if(${WIN32})
 
 	source_group(Source\ Files\\TinyXML2 FILES ${TinyXML2})
 	source_group(Source\ Files\\SDL-Gfx FILES ${SDLGFX})
+
+	source_group(Source\ Files\\Engine\\Util FILES ${Util})
 
 	link_libraries (
 		${SDL_LIBRARY}
