Added a nifty little toString() method like java, C++ gods don't strike me down :P
Added an ImageLoader that will handle all image loading/resizing.  This holds the actual image data.  When an image is drawn to screen, the drawer called ImageLoader::getImage(string src) which returns the image data to draw.  Src is returned whenever the image is loaded.  This is an easy way to make sure there is only one copy of an image in memory at any one time.  The only problem is once an image is loaded, it stays in memory till the game terminates.  Going to keep it like that for now since fixing that little issue is not worth the time for the limited amount of images this game uses.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ FILE(GLOB WINDOWDLLS lib/windows/dlls/*.dll)
 FILE(GLOB SDLGFX includes/sdl-gfx/*.h includes/sdl-gfx/*.c)
 FILE(GLOB TinyXML2 includes/tinyxml2/*.h includes/tinyxml2/*.cpp)
 
+FILE(GLOB Graphics src/Engine/Graphics/*.h src/Engine/Graphics/*.cpp)
 File(GLOB Time src/Engine/Time/*.h src/Engine/Timer/*.cpp)
 FILE(GLOB Util src/Engine/Util/*.h src/Engine/Util/*.cpp)
 
@@ -28,6 +29,7 @@ set (
 	${SDLGFX}
 	${TinyXML2}
 
+	${Graphics}
 	${Time}
 	${Util}
 )
@@ -54,6 +56,7 @@ if(${WIN32})
 	source_group(Source\ Files\\TinyXML2 FILES ${TinyXML2})
 	source_group(Source\ Files\\SDL-Gfx FILES ${SDLGFX})
 
+	source_group(Source\ Files\\Engine\\Graphics FILES ${Graphics})
 	source_group(Source\ Files\\Engine\\Time FILES ${Time})
 	source_group(Source\ Files\\Engine\\Util FILES ${Util})
 
