--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,8 @@ FILE(GLOB SDLGFX includes/sdl-gfx/*.h includes/sdl-gfx/*.c)
 FILE(GLOB TinyXML2 includes/tinyxml2/*.h includes/tinyxml2/*.cpp)
 
 FILE(GLOB Graphics src/Engine/Graphics/*.h src/Engine/Graphics/*.cpp)
-File(GLOB Time src/Engine/Time/*.h src/Engine/Timer/*.cpp)
+FILE(GLOB Sound src/Engine/Source/*.h src/Engine/Sound/*.cpp)
+FILE(GLOB Time src/Engine/Time/*.h src/Engine/Time/*.cpp)
 FILE(GLOB Util src/Engine/Util/*.h src/Engine/Util/*.cpp)
 
 FILE(GLOB Config data/config/config.xml)
@@ -30,6 +31,7 @@ set (
 	${TinyXML2}
 
 	${Graphics}
+	${Sound}
 	${Time}
 	${Util}
 )
@@ -57,6 +59,7 @@ if(${WIN32})
 	source_group(Source\ Files\\SDL-Gfx FILES ${SDLGFX})
 
 	source_group(Source\ Files\\Engine\\Graphics FILES ${Graphics})
+	source_group(Source\ Files\\Engine\\Sound FILES ${Sound})
 	source_group(Source\ Files\\Engine\\Time FILES ${Time})
 	source_group(Source\ Files\\Engine\\Util FILES ${Util})
 
