Added configuration settings to the three loaders to have a default path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ FILE(GLOB Time src/Engine/Time/*.h src/Engine/Time/*.cpp)
 FILE(GLOB Util src/Engine/Util/*.h src/Engine/Util/*.cpp)
 
 FILE(GLOB Config data/config/config.xml)
-FILE(GLOB Tiles data/tiles/*.png)
+FILE(GLOB Images data/images/*.png)
 FILE(GLOB Maps data/maps/*.xml)
 FILE(GLOB Fonts data/fonts/*.tff)
 FILE(GLOB Music data/music/*.ogg)
@@ -74,7 +74,7 @@ if(${WIN32})
 	file(COPY ${DLLS} DESTINATION Debug)
 
 	file(COPY ${Config} DESTINATION Debug/data/config)
-	file(COPY ${Tiles} DESTINATION Debug/data/tiles)
+	file(COPY ${Images} DESTINATION Debug/data/images)
 	file(COPY ${Maps} DESTINATION Debug/data/maps)
 	file(COPY ${Fonts} DESTINATION Debug/data/fonts)
 	file(COPY ${Music} DESTINATION Debug/data/music)
@@ -90,7 +90,7 @@ elseif(${UNIX})
 
 
 	file(COPY ${Config} DESTINATION data/config)
-	file(COPY ${Tiles} DESTINATION data/tiles)
+	file(COPY ${Images} DESTINATION data/images)
 	file(COPY ${Maps} DESTINATION data/maps)
 	file(COPY ${Fonts} DESTINATION data/fonts)
 	file(COPY ${Music} DESTINATION data/music)
