- Whole bunch of bug fixes to the game Engine - Added new images - Added the AssignState - Added a new GUI Component - Added a font

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ FILE(GLOB VillagesUtil src/Villages/Util/*.h src/Villages/Util/*.cpp)
 FILE(GLOB Config data/config/config.xml)
 FILE(GLOB Images data/images/*.png)
 FILE(GLOB Maps data/maps/*.xml)
-FILE(GLOB Fonts data/fonts/*.tff)
+FILE(GLOB Fonts data/fonts/*.ttf)
 FILE(GLOB Music data/music/*.ogg)
 
 set (
