Fixed an error in the cmake file that was not copying over title.mp3 to the debug folder.  I guess the judges will not to get to hear music in the title/credits screen :(  hopefully it does not error out.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,7 @@ FILE(GLOB Config data/config/config.xml)
 FILE(GLOB Images data/images/*.png)
 FILE(GLOB Maps data/maps/*.xml)
 FILE(GLOB Fonts data/fonts/*.ttf)
-FILE(GLOB Music data/music/*.ogg)
+FILE(GLOB Music data/music/*.ogg data/music/*.mp3)
 
 set (
 	SOURCES
